--- a/blog.config.yaml
+++ b/blog.config.yaml
@@ -1,1 +1,6 @@
 theme: ghibli
+title: "Marklog-example"
+description: "Thoughts on code and life"
+theme: "pixel" # Try: light, dark, ghibli, pixel
+show_toc: true
+show_repo_link: true
