--- a/blog.config.yaml
+++ b/blog.config.yaml
@@ -1,6 +1,15 @@
-theme: ghibli
 title: "Marklog-example"
 description: "Thoughts on code and life"
 theme: "pixel" # Try: light, dark, ghibli, pixel
-show_toc: true
-show_repo_link: true
+author:
+  name: Jask
+  bio: Full stack developer & pixel artist
+  avatar: https://avatars.githubusercontent.com/u/67848850?v=4
+social:
+  github: https://github.com/respectevery01
+  twitter: https://x.com/jaskdon
+nav:
+  - label: Home
+    url: /
+  - label: About
+    url: /about
