--- a/blog.config.yaml
+++ b/blog.config.yaml
@@ -1,6 +1,6 @@
 title: "Marklog-example"
-description: "Thoughts on code and life"
-theme: "pixel" # Try: light, dark, ghibli, pixel
+description: "Creator of Marklog"
+theme: "ghibli" # Try: light, dark, ghibli, pixel
 author:
   name: Jask
   bio: Full stack developer & pixel artist
