--- a/blog.config.yaml
+++ b/blog.config.yaml
@@ -1,6 +1,6 @@
 title: "Marklog-example"
 description: "Creator of Marklog"
-theme: "light" # Try: light, dark, ghibli, pixel
+theme: "dark" # Try: light, dark, ghibli, pixel
 author:
   name: Jask
   bio: Full stack developer & pixel artist
