--- a/blog.config.yaml
+++ b/blog.config.yaml
@@ -1,6 +1,6 @@
 title: "Marklog-example"
 description: "Creator of Marklog"
-theme: "ghibli" # Try: light, dark, ghibli, pixel
+theme: "pixel" # Try: light, dark, ghibli, pixel
 language: "en" # en or zh-cn
 author:
   name: Jask
